bk_ida/gccida/c2/rm_line_notes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1646:4: error: expected ';' after expression
rtx v3; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1646:5: error: use of undeclared identifier 'v3'
rtx v3; // r9 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1647:4: error: expected ';' after expression
rtx v4; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1647:5: error: use of undeclared identifier 'v4'
rtx v4; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1654:1: error: use of undeclared identifier 'v3'
v3 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1657:17: error: use of undeclared identifier 'v3'
if ( *( _WORD *)v3 != 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1659:1: error: use of undeclared identifier 'v4'
v4 = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1659:6: error: use of undeclared identifier 'v3'
v4 = v3; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1662:26: error: use of undeclared identifier 'v3'
v5 = (  struct rtx_def *)v3[1]; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1663:6: error: use of undeclared identifier 'v3'
v6 = v3; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1666:1: error: use of undeclared identifier 'v4'
v4 = v6[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1673:6: error: use of undeclared identifier 'v4'
if ( v4 == rtx ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1676:6: error: use of undeclared identifier 'v4'
v6 = v4; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1677:17: error: use of undeclared identifier 'v4'
if ( *( _WORD *)v4 != 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1681:33: error: use of undeclared identifier 'v4'
v5[1].fld[0].rtwint = ( __int64)v4; 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1682:6: error: use of undeclared identifier 'v4'
if ( v4 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1683:14: error: use of undeclared identifier 'v4'
*( _QWORD *)&v4[1] = v5; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1685:6: error: use of undeclared identifier 'v4'
if ( v4 != rtx ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/haifa-sched.c:1688:1: error: use of undeclared identifier 'v4'
v4 = rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rm_line_notes/src/obj/haifa-sched.o] Error 1
